--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.86.3",
@@ -36,7 +38,9 @@
     "typescript": "^5"
   },
   "lint-staged": {
-  "*.{js,ts,tsx}": ["prettier --write", "eslint --fix"]
-}
-
+    "*.{js,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
+  }
 }
